--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15881,6 +15881,11 @@ video {
   background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
 }
 
+.bg-cancel {
+  --tw-bg-opacity: 1;
+  background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+}
+
 .group:hover .group-hover\:bg-transparent {
   background-color: transparent;
 }
@@ -16312,6 +16317,11 @@ video {
 .group:hover .group-hover\:bg-main {
   --tw-bg-opacity: 1;
   background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+}
+
+.group:hover .group-hover\:bg-cancel {
+  --tw-bg-opacity: 1;
+  background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
 }
 
 .focus-within\:bg-transparent:focus-within {
@@ -16747,6 +16757,11 @@ video {
   background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
 }
 
+.focus-within\:bg-cancel:focus-within {
+  --tw-bg-opacity: 1;
+  background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+}
+
 .hover\:bg-transparent:hover {
   background-color: transparent;
 }
@@ -17180,6 +17195,11 @@ video {
   background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
 }
 
+.hover\:bg-cancel:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+}
+
 .focus\:bg-transparent:focus {
   background-color: transparent;
 }
@@ -17611,6 +17631,11 @@ video {
 .focus\:bg-main:focus {
   --tw-bg-opacity: 1;
   background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+}
+
+.focus\:bg-cancel:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
 }
 
 .bg-opacity-0 {
@@ -47657,6 +47682,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .sm\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .group:hover .sm\:group-hover\:bg-transparent {
     background-color: transparent;
   }
@@ -48088,6 +48118,11 @@ video {
   .group:hover .sm\:group-hover\:bg-main {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .group:hover .sm\:group-hover\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .sm\:focus-within\:bg-transparent:focus-within {
@@ -48523,6 +48558,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .sm\:focus-within\:bg-cancel:focus-within {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .sm\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -48956,6 +48996,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .sm\:hover\:bg-cancel:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .sm\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -49387,6 +49432,11 @@ video {
   .sm\:focus\:bg-main:focus {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .sm\:focus\:bg-cancel:focus {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .sm\:bg-opacity-0 {
@@ -79081,6 +79131,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .md\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .group:hover .md\:group-hover\:bg-transparent {
     background-color: transparent;
   }
@@ -79512,6 +79567,11 @@ video {
   .group:hover .md\:group-hover\:bg-main {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .group:hover .md\:group-hover\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .md\:focus-within\:bg-transparent:focus-within {
@@ -79947,6 +80007,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .md\:focus-within\:bg-cancel:focus-within {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .md\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -80380,6 +80445,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .md\:hover\:bg-cancel:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .md\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -80811,6 +80881,11 @@ video {
   .md\:focus\:bg-main:focus {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .md\:focus\:bg-cancel:focus {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .md\:bg-opacity-0 {
@@ -110505,6 +110580,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .lg\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .group:hover .lg\:group-hover\:bg-transparent {
     background-color: transparent;
   }
@@ -110936,6 +111016,11 @@ video {
   .group:hover .lg\:group-hover\:bg-main {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .group:hover .lg\:group-hover\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .lg\:focus-within\:bg-transparent:focus-within {
@@ -111371,6 +111456,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .lg\:focus-within\:bg-cancel:focus-within {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .lg\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -111804,6 +111894,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .lg\:hover\:bg-cancel:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .lg\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -112235,6 +112330,11 @@ video {
   .lg\:focus\:bg-main:focus {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .lg\:focus\:bg-cancel:focus {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .lg\:bg-opacity-0 {
@@ -141929,6 +142029,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .xl\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .group:hover .xl\:group-hover\:bg-transparent {
     background-color: transparent;
   }
@@ -142360,6 +142465,11 @@ video {
   .group:hover .xl\:group-hover\:bg-main {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .group:hover .xl\:group-hover\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .xl\:focus-within\:bg-transparent:focus-within {
@@ -142795,6 +142905,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .xl\:focus-within\:bg-cancel:focus-within {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .xl\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -143228,6 +143343,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .xl\:hover\:bg-cancel:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .xl\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -143659,6 +143779,11 @@ video {
   .xl\:focus\:bg-main:focus {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .xl\:focus\:bg-cancel:focus {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .xl\:bg-opacity-0 {
@@ -173353,6 +173478,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .\32xl\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .group:hover .\32xl\:group-hover\:bg-transparent {
     background-color: transparent;
   }
@@ -173784,6 +173914,11 @@ video {
   .group:hover .\32xl\:group-hover\:bg-main {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .group:hover .\32xl\:group-hover\:bg-cancel {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .\32xl\:focus-within\:bg-transparent:focus-within {
@@ -174219,6 +174354,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .\32xl\:focus-within\:bg-cancel:focus-within {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .\32xl\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -174652,6 +174792,11 @@ video {
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
   }
 
+  .\32xl\:hover\:bg-cancel:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
+  }
+
   .\32xl\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -175083,6 +175228,11 @@ video {
   .\32xl\:focus\:bg-main:focus {
     --tw-bg-opacity: 1;
     background-color: rgba(27, 27, 27, var(--tw-bg-opacity));
+  }
+
+  .\32xl\:focus\:bg-cancel:focus {
+    --tw-bg-opacity: 1;
+    background-color: rgba(151, 151, 151, var(--tw-bg-opacity));
   }
 
   .\32xl\:bg-opacity-0 {
